Revision history for Spreadsheet-HTML

0.06    
        - using HTML::Element
        - refactored arg handling
        - added table attrs
        - corrected license ref

0.05    Corrected build and unit testing

0.04    Temporarily allowing DBIx::HTML to subclass.

0.03    Major refactoring, able to transpose.

0.02    First version, released on an unsuspecting world.
