@@ -18,7 +18,6 @@ WriteMakefile(
         'Test::More'        => 0,
         'Math::Matrix'      => 0,
         'HTML::Tree'        => 0,
-        'HTML::Entities'    => 0,
     },
     PREREQ_PM => { },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
