@@ -2,9 +2,11 @@ Revision history for Spreadsheet-HTML
 
 0.06    
         - using HTML::Element
+        - H::E handles encoding and indention
         - refactored arg handling
         - added table attrs
         - corrected license ref
+        - TODO: make th and td attrs non-global 
 
 0.05    Corrected build and unit testing
 
